<resources>
    <string name="app_name">PinClassroom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Aulas</string>
    <string name="menu_slideshow">Docentes</string>
    <string name="menu_tools">Eventos</string>
    <string name="menu_share">Configuraciones</string>
    <string name="menu_send">Cerrar sesión</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Aulas</string>
    <string name="hello_blank_fragment2">Mapa</string>
</resources>
